--- a/src/components/navigation/Nav.css
+++ b/src/components/navigation/Nav.css
@@ -28,14 +28,68 @@
 }
 
 .NavLinks {
-  display: flex;
-  justify-content: space-between;
-  gap: 1rem;
   & a {
     color: var(--text-color);
     font-size: 1.5rem;
     font-weight: 500;
     text-decoration: none;
+  }
+}
+.navlinks-menu {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+}
+.mobile-btn {
+  display: none;
+}
+@media screen and (max-width: 720px) {
+  .nav {
+    flex-direction: column;
+    gap: 1rem;
+    & .theme-toggle-button {
+      display: none;
+    }
+  }
+  .mobile-btn {
+    display: block;
+    position: absolute;
+    right: 1rem;
+    cursor: pointer;
+    z-index: 10;
+    color: var(--text-color);
+  }
+  .NavLinks {
+    background-color: var(--background-color);
+    color: var(--text-color);
+    width: 100%;
+    height: 100vh;
+  }
+  .navlinks-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    left: -100%;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+
+    gap: 5rem;
+
+    z-index: 10;
+    transition: left 1s;
+  }
+
+  .active {
+    left: 0;
+  }
+
+  .NavLinks a {
+    font-size: 2rem;
   }
 }
 
