--- a/src/components/navigation/Nav.css
+++ b/src/components/navigation/Nav.css
@@ -7,11 +7,11 @@
 }
 .logo > img {
   border-radius: 50%;
-  height: 3.5rem;
+  height: 4rem;
 }
 .theme-toggle-button {
   margin-left: auto;
-  margin-right: 2.5rem;
+  margin-right: 1.5rem;
   & svg {
     color: var(--toggle-button-color);
   }
@@ -44,26 +44,27 @@
   display: none;
 }
 @media screen and (max-width: 720px) {
+  /* remove ability to scroll up and down */
+  body {
+    overflow: hidden;
+  }
+
+  .theme-toggle-button {
+    margin-right: 1.5rem;
+  }
+
   .nav {
-    flex-direction: column;
+    /* flex-direction: column; */
     gap: 1rem;
-    & .theme-toggle-button {
-      display: none;
-    }
   }
   .mobile-btn {
     display: block;
-    position: absolute;
+    position: fixed;
+    top: 2.5rem;
     right: 1rem;
     cursor: pointer;
     z-index: 10;
     color: var(--text-color);
-  }
-  .NavLinks {
-    background-color: var(--background-color);
-    color: var(--text-color);
-    width: 100%;
-    height: 100vh;
   }
   .navlinks-menu {
     display: flex;
@@ -80,6 +81,8 @@
 
     gap: 5rem;
 
+    background-color: var(--background-color);
+    color: var(--text-color);
     z-index: 10;
     transition: left 1s;
   }
