--- a/src/components/navigation/Nav.css
+++ b/src/components/navigation/Nav.css
@@ -16,7 +16,7 @@
     color: var(--toggle-button-color);
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: 720) {
     margin-right: 1rem;
   }
 }
