--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,20 @@
 .dark-mode {
   --background-color: #121212;
   --text-color: #d7dadc;
-  --accent-color: #66d9ef;
+  --accent-color: #64b5f6;
   transition: 0.5s ease-in-out;
 }
 .light-mode {
   --background-color: #f0f0f0;
   --text-color: #333;
-  --accent-color: #007bff;
+  --accent-color: #0d47a1;
   transition: 0.5s ease-in-out;
 }
+
+/* //64b5f6 */
+/* //2196f3 */
+/* //1976d2 */
+/* //0d47a1 */
 
 html,
 body,
