--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -17,6 +17,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 2rem;
 }
 .profile-header-upper-half {
   display: flex;
