Work Section + JSON data done

--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 2rem;
+  margin: 3rem auto;
 }
 .profile-header-upper-half {
   display: flex;
