--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
 .dark-mode {
   --background-color: #121212;
+  --card-background-color: #171b23;
   --text-color: #d7dadc;
+  --card-text-color: #f5f5f5;
   --accent-color: #1976d2;
+
   transition: 0.5s ease-in-out;
 }
 .light-mode {
   --background-color: #f0f0f0;
+  --card-background-color: #edf0f1;
   --text-color: #333;
+  --card-text-color: #333;
   --accent-color: #2196f3;
+
   transition: 0.5s ease-in-out;
 }
 
