Contact-form fix text color

--- a/src/components/contact/ContactForm.css
+++ b/src/components/contact/ContactForm.css
@@ -2,14 +2,19 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   background-color: var(--card-background-color) !important;
   padding: 1rem !important;
-  min-width: 300px;
-  padding: 2rem;
-  margin: 4rem auto;
-
+  min-width: 00px;
+  margin: 4rem auto !important;
 }
 .card-actions{
   display: flex;
   justify-content: center;
   gap: 8rem !important;
   margin:1rem ;
+}
+
+.contact-form-name{
+  color: var(--accent-color) !important;
+}
+.contact-form-description{
+  color: var(--card-text-color) !important;
 }
